--- a/model_chat/templates/list_chats/groups_page.html
+++ b/model_chat/templates/list_chats/groups_page.html
@@ -1,29 +1,13 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'css/groups.css' %}">
     <title>Grupos de Chat</title>
-    <style>
-        .group-list {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        .group-list li {
-            padding: 15px;
-            margin: 5px 0;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        .group-list li:hover {
-            background-color: #f0f0f0;
-        }
-    </style>
 </head>
 <body class="bg-light">
     <div class="container mt-5">
