--- a/model_chat/templates/chats/group_chat_page.html
+++ b/model_chat/templates/chats/group_chat_page.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grupo - {{ group_chat.name }}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="{% static 'css/group_chat.css' %}">
 </head>
 <body>
@@ -28,7 +29,7 @@
         <div class="input-group">
             <input type="text" id="chat-message-input" class="form-control" autocomplete="off" placeholder="Type your message...">
             <div class="input-group-append">
-                <button id="send-message" class="btn btn-primary">Send</button>
+                <button id="send-message" class="btn btn-primary"><i class="fas fa-paper-plane"></i></button>
             </div>
         </div>
     </div>
