--- a/model_chat/templates/chats/duo_chat_page.html
+++ b/model_chat/templates/chats/duo_chat_page.html
@@ -57,6 +57,7 @@
     </div>
 
     <script src="{% static 'js/emoji_selector.js' %}"></script>
-    <script src="{% static 'js/duo_chat.js' %}"></script>
+    <script type="module" src="{% static 'js/chat/duo_chat.js' %}"></script>
+    <!-- <script src="{% static 'js/chat/test.js' %}"></script> -->
 </body>
 </html>
