--- a/model_chat/templates/chats/group_chat_page.html
+++ b/model_chat/templates/chats/group_chat_page.html
@@ -34,6 +34,7 @@
         </div>
     </div>
 
-    <script src="{% static 'js/group_chat.js' %}"></script>
+    <!-- <script src="{% static 'js/chat_group/test.js' %}"></script> -->
+    <script type="module" src="{% static 'js/chat_group/group_chat.js' %}"></script>
 </body>
 </html>
