--- a/model_chat/static/css/duo_chat.css
+++ b/model_chat/static/css/duo_chat.css
@@ -7,23 +7,34 @@
     background-color: #f1f1f1;
 }
 #chat-message-input {
-    width: calc(100% - 120px);
+    flex: 1; /* Preenche o espaço restante */
+    margin-right: 5px; /* Espaçamento entre a barra de mensagem e os botões */
+    height: 40px; /* Definindo altura para a barra de entrada */
+    border-radius: 5px; /* Arredondando as bordas */
+}
+.input-group {
+    display: flex;
+    align-items: center; /* Alinha verticalmente os itens no centro */
 }
 .input-group-append .btn {
-    height: 100%;
+    height: 40px; /* Definindo altura para os botões */
+    line-height: 1; /* Para garantir que o ícone fique centralizado */
+    border-radius: 5px; /* Arredondando as bordas dos botões */
 }
 .btn-secondary {
     background-color: #6c757d;
     border: none;
+    border-radius: 5px; /* Arredondando as bordas dos botões cinzas */
 }
-.btn-terciary {
-    background-color: #6c757d;
-    border: none;
+.btn-primary {
+    border-radius: 5px; /* Arredondando as bordas do botão azul */
+}
+.recording {
+    background-color: #dc3545 !important; /* Cor vermelha quando gravando */
 }
 #chat-file-input {
     display: none;
 }
-/* Estilo do balão de emojis */
 #emoji-container {
     display: none; /* Oculto por padrão */
     position: absolute;
@@ -36,5 +47,5 @@
 .emoji {
     cursor: pointer;
     margin: 5px;
-    font-size: 24px; /* Tamanho do emoji */
+    font-size: 16px; /* Tamanho do emoji */
 }
