--- a/model_chat/templates/chats/duo_chat_page.html
+++ b/model_chat/templates/chats/duo_chat_page.html
@@ -9,7 +9,7 @@
     <title>Chat with {{ target_user.name }}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="{% static 'css/duo_chat.css' %}">
+    <link rel="stylesheet" href="{% static 'css/duo_chat.css' %}">       
 </head>
 <body data-user-code="{{ request.user.code }}" data-target-user-code="{{ target_user.code }}">
     <div class="container mt-5">
@@ -33,7 +33,6 @@
                                     <source src="{{ item.content.file.url }}" type="audio/mpeg">
                                     Seu navegador não suporta o elemento de áudio.
                                 </audio>
-                                <!-- <br><a href="{{ item.content.file.url }}" download="{{ item.content.filename }}">{{ item.content.filename }}</a> <em>({{ item.content.timestamp|date:"H:i" }})</em> -->
                             </div>
                         {% else %}
                             <a href="{{ item.content.file.url }}" download="{{ item.content.filename }}">{{ item.content.filename }}</a> <em>({{ item.content.timestamp|date:"H:i" }})</em>
@@ -43,17 +42,17 @@
             {% endfor %}
         </div>
 
-        <div class="input-group">
+        <div class="input-group mb-3">
             <input type="file" id="chat-file-input" class="form-control-file" accept="image/*,video/*,application/pdf,audio/*">
             <input type="text" id="chat-message-input" class="form-control" autocomplete="off" placeholder="Type your message...">
             <div class="input-group-append">
                 <button id="send-emoji" class="btn btn-secondary"><i class="fas fa-smile"></i></button>
                 <button class="btn btn-secondary" id="send-file"><i class="fas fa-paperclip"></i></button>
+                <button id="send-audio" class="btn btn-secondary"><i class="fas fa-microphone"></i></button>
                 <button id="send-message" class="btn btn-primary"><i class="fas fa-paper-plane"></i></button>
             </div>
         </div>
 
-        <!-- Contêiner de emojis -->
         <div id="emoji-container">
             <span class="emoji" data-emoji="😀">😀</span>
             <span class="emoji" data-emoji="😂">😂</span>
@@ -66,6 +65,6 @@
 
     <script src="{% static 'js/emoji_selector.js' %}"></script>
     <script type="module" src="{% static 'js/chat/duo_chat.js' %}"></script>
-    <!-- <script src="{% static 'js/chat/test.js' %}"></script> -->
+
 </body>
 </html>
