--- a/model_chat/templates/chats/group_chat_page.html
+++ b/model_chat/templates/chats/group_chat_page.html
@@ -8,7 +8,7 @@
     <title>Grupo - {{ group_chat.name }}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="{% static 'css/group_chat.css' %}">
+    <link rel="stylesheet" href="{% static 'css/chats/group_chat.css' %}">
 </head>
 <body>
     <div class="container mt-5">
