--- a/model_chat/templates/chats/duo_chat_page.html
+++ b/model_chat/templates/chats/duo_chat_page.html
@@ -9,7 +9,7 @@
     <title>Chat with {{ target_user.name }}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="{% static 'css/duo_chat.css' %}">       
+    <link rel="stylesheet" href="{% static 'css/chats/duo_chat.css' %}">       
 </head>
 <body data-user-code="{{ request.user.code }}" data-target-user-code="{{ target_user.code }}">
     <div class="container mt-5">
