--- a/model_chat/templates/list_chats/groups_page.html
+++ b/model_chat/templates/list_chats/groups_page.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{% static 'css/groups.css' %}">
+    <link rel="stylesheet" href="{% static 'css/list_chats/groups.css' %}">
     <title>Grupos de Chat</title>
 </head>
 <body class="bg-light">
